--- a/settings.json
+++ b/settings.json
@@ -6,14 +6,14 @@
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"BotName":"ZeilBotz", 
-"NomorOwner":"6281376900646", 
-"NomorOwner2":"6281376900646", 
-"NamaOwner":"ZeilBotz", 
-"Dana":"081376900646", 
-"Pulsa":"081376900646", 
-"Ovo":"081376900646", 
-"Gopay":"081376900646", 
+"BotName":"PutraBotz", 
+"NomorOwner":"6285783026012", 
+"NomorOwner2":"6285841509232", 
+"NamaOwner":"PutraBotz", 
+"Dana":"085841509232", 
+"Pulsa":"085841509232", 
+"Ovo":"085841509232", 
+"Gopay":"085783026012", 
 "ZeksApi":"twBHoFu3AnqfE6f2rwAuirfTVgh",
 "Zerkey":"ZeroYT7",
 "Lolkey":"IWasHuman",
